--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -9,7 +9,7 @@
     color: var(--logo-color);
 }
 
-.logo-web {
+.logo__web {
     color: var(--accent-color);
     display: flex;
     font-family: 'Raleway';
