--- a/sass/components/_menu-nav.scss
+++ b/sass/components/_menu-nav.scss
@@ -1,4 +1,4 @@
-.gen-nav {
+.nav-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -12,10 +12,11 @@
 
 .navigation {
     display: flex;
+    align-items: center;
     column-gap: 50px;
 }
 
-.navigation .link {
+.navigation__link {
     display: block;
     color: var(--title-color);
     font-weight: 500;
@@ -23,14 +24,15 @@
     letter-spacing: 0.02em;
     text-decoration: none;
     transition: color var(--transition-dur-func);
-    & .link:hover,
-    & .link:focus {
+    &:hover,
+    &:focus {
         color: var(--accent-color);
     }
 }
 
 
-.link.current {
+.navigation__link_current {
+    position: relative;
     color: var(--accent-color);
     &::after {
         display: inline-block;
@@ -39,8 +41,9 @@
         height: 4px;
         border-radius: 2px;
         background-color: var(--accent-color);
-        position: relative;
-        bottom: -28px;
+        position: absolute;
+        left: 0;
+        bottom: -32px;
     }
 }
 
