--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -15,7 +15,7 @@
     color: var(--primary-white-color);
 }
 
-.menu.list {
+.menu__list {
     display: flex;
     justify-content: center;
     gap: 8px;
