--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,7 +11,7 @@ img {
     border: 0;
 }
 
-.list {
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -21,7 +21,7 @@ button {
     cursor: pointer;
 }
 
-.list-collection {
+.list__collection {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
