--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -14,7 +14,7 @@
     background-position: center;
 }
 
-.hero .title {
+.hero__title {
     width: 700px;
     margin-top: 106px;
     margin-bottom: 40px;
